Updated home, contact us and about us pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About us</h1>
-<p>We are working on our one month rails project.</p>
+<p>Chanel Costabir is the founder of online luxury lingerie, LingerieBoutique.com.au. Featured in publications such as the Australian Financial Review, Management Today magazine and Fashion TV, Chanel has presented at the prestigious World Retail Congress in Paris and is recognised as one of Australia's top entrepreneurs under 30. Chanel draws on her background in consumer psychology and her passion for style, to offer a unique take on fashion and business.</p>
