--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to my website!</h1>
-<p>Sign up here</p>
+<h1>Welcome to LUXBUB!</h1>
+<p>LUXBUB is a photo sharing app for stylish parents. Connect with and be inspired by parents from around the world.</p>
